--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/stile.css">
+        <link rel="stylesheet" href="stile.css">
 
     </head>
 
@@ -28,7 +28,7 @@
 
             <div class="main">
 
-                <div><img src="immagini/balli_di_coppia.jpg" class="img1" alt="immagine balli di coppia" /></div>
+                <div><img src="balli_di_coppia.jpg" class="img1" alt="immagine balli di coppia" /></div>
 
                 <div class="danze_caraibiche">
 
