--- a/danzecaraibiche.html
+++ b/danzecaraibiche.html
@@ -10,7 +10,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/stile.css">
+        <link rel="stylesheet" href="stile.css">
 
 
     </head>
@@ -29,8 +29,8 @@
 
             <div class="main">
 
-                <div><img src="immagini/balli_caraibici1.jpg" class="img2" alt="immagine balli caraibici" /></div>
-                <div><img src="immagini/balli_caraibici2.jpg" class="img2" alt="immagine balli caraibici" /></div>
+                <div><img src="balli_caraibici1.jpg" class="img2" alt="immagine balli caraibici" /></div>
+                <div><img src="balli_caraibici2.jpg" class="img2" alt="immagine balli caraibici" /></div>
 
                 <div class="danze_caraibiche">
 
