--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/stile.css">
+        <link rel="stylesheet" href="stile.css">
 
     </head>
 
